--- a/templates/dashboard/admin/ajax/forms/addContact.html.twig
+++ b/templates/dashboard/admin/ajax/forms/addContact.html.twig
@@ -12,9 +12,9 @@
             {{ form_widget(addNewContactForm.phone) }}
         </div>
 
-        <div class="col xl5 l12 m12 s12">
+        <div class="input-field col xl5 l12 m12 s12">
+            {{form_widget(addNewContactForm.existingType) }}
             {{form_label(addNewContactForm.existingType) }}
-            {{form_widget(addNewContactForm.existingType, {'attr': {'class': 'browser-default'}}) }}
         </div>
 
         <div class="col xl1 l4 m12 s12">
