--- a/templates/dashboard/admin/tables/owners.html.twig
+++ b/templates/dashboard/admin/tables/owners.html.twig
@@ -3,14 +3,25 @@
         <li class="collection-header"><h5>Propriétaires & cavaliers</h5></li>
 
         {% for owner in paginationOwners['owners']  %}
-            {% if owner.name is empty %}
-                <li class="collection-item">{{ owner.completeName }}
-                    <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">{{ owner.phone|phone }}</a>
-                </li>
-            {% else %}
-                <li class="collection-item">{{ owner.completeName }} ({{ owner.name }})
-                    <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">{{ owner.phone|phone }}</a>
-                </li>
+            {% if owner.phone is not empty %}
+                {% if owner.horse is empty %}
+                    <li class="collection-item">{{ owner.completeName }}
+                        <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">{{ owner.phone|phone }}</a>
+                    </li>
+                {% else %}
+                    <li class="collection-item">{{ owner.completeName }}
+                        {% for horse in owner.horse %}
+
+                            {% if owner.horse|length > 1 %}
+                                {% if loop.first %}({% endif %}{{ horse.name }}{% if not loop.last %} / {% endif %}{% if loop.last %}){% endif %}
+                            {% else %}
+                                ({{ horse.name }})
+                            {% endif %}
+                        {% endfor %}
+
+                        <a class="secondary-content" style="color: #00b1bc;" href="tel:+33{{ owner.phone }}">{{ owner.phone|phone }}</a>
+                    </li>
+                {% endif %}
             {% endif %}
         {% endfor %}
     </ul>
